objects/IFE_Repair_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFE Repair Quotes</relationshipLabel>
        <relationshipName>IFE_Repair_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFE_Decline_Action__c</fullName>
        <label>Decline Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return Part</fullName>
                </value>
                <value>
                    <fullName>Scrap on Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFE_Reason_For_Decline__c</fullName>
        <label>Reason For Decline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFE_SR_NUMBER__c</fullName>
        <label>SR NUMBER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopEmail__c</fullName>
        <formula>$CustomMetadata.ifeRepairShop__mdt.PACSS.Shop_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShopEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Email__c</fullName>
        <label>Shop Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shop__c</fullName>
        <label>Shop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>IFE Repair Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shop__c</columns>
        <columns>IFE_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Shop_Email__c</columns>
        <columns>ShopEmail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_PO_Number__c</columns>
        <columns>Estimate__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Shop__c</columns>
        <columns>Shop_Email__c</columns>
        <columns>IFE_SR_NUMBER__c</columns>
        <columns>IFE_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IFE Repair Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFE Repair Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>